# nyx-darkpool

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Makefile  README.md  STATUS.md  docker-compose.demo.yml  docker-compose.yml  railway.json  render.yaml
circuits/: README.md  darkpool_match.circom  input.json  package-lock.json  package.json  proof.json  public.json  verification_key.json
circuits/scripts/: gen_input.js
contracts/: README.md
contracts/nyx-verifier/: Cargo.toml
contracts/nyx-verifier/src/: lib.rs  test.rs  verifier.rs  vk.rs
docs/: README.md  demo-narration.md  demo-script.md  deploy.md  key-custody.md  test-checklist.md
engine/: Dockerfile  README.md  docker-entrypoint.sh  go.mod
engine/cmd/server/: main.go
engine/db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_order_commitment.down.sql  000002_order_commitment.up.sql
engine/internal/api/: api.go  (+3 more)
scripts/: README.md  compile_circuit.sh  demo_testnet.sh  deploy_contract.sh  e2e_live.mjs  e2e_offchain.sh  e2e_onchain.sh  install_circom.sh  proof_to_bytes.js  seed_demo_orders.js
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.html  brand-board.html  directions.html  index.html  landing.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/design-src/: Nyx App.dc.html  Nyx Brand Board.dc.html  Nyx Directions.dc.html  Nyx Landing.dc.html
web/e2e/: smoke.spec.ts
web/styles/: base.css  tokens.css
web/types/: circomlibjs.d.ts
(+54 files in other folders)
